Fixed about page
Still has some breakage issues from page spill over

--- a/sass/stylesheet.scss
+++ b/sass/stylesheet.scss
@@ -285,6 +285,9 @@
   background-color: white;
 }
 
+.large-margin{
+  margin-top: 75px;
+}
 //----------------------------------------------------------------------------------
 //C O N T A C T  P A G E
 //----------------------------------------------------------------------------------
